# rs-python-app-template

./: Cargo.toml  README.md  build.rs
python/: app.py  rust.py
src/: main.rs  py_tools.rs
