[package]
name = "python-app-template"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1"

[dependencies]
pyo3 = {version = "0.19.0", features = ["auto-initialize"]}
winapi = {version = "0.3", features = ["wincon", "winuser"]}